--- a/animation-activity/activity.css
+++ b/animation-activity/activity.css
@@ -1,21 +1,23 @@
-.hamburger:hover > div:nth-child(1){
+.hamburger:hover>div:nth-child(1) {
   background-color: ghostwhite;
   animation-name: top;
   animation-duration: 1s;
   animation-fill-mode: forwards;
 }
 
-.hamburger:hover > div:nth-child(2){
+.hamburger:hover>div:nth-child(2) {
   animation-name: middle;
   animation-duration: .1s;
   animation-fill-mode: forwards;
+  opacity: 0%;
 }
 
-.hamburger:hover > div:nth-child(3){
+.hamburger:hover>div:nth-child(3) {
   background-color: ghostwhite;
   animation-name: bottom;
   animation-duration: 1s;
   animation-fill-mode: forwards;
+
 }
 
 nav {
@@ -23,21 +25,32 @@ nav {
   transition-duration: 1s;
 }
 
-.hamburger:hover ~ nav {
+.hamburger:hover~nav {
   opacity: 1;
 }
 
 @keyframes top {
-  from {}
-  to {}
+  from {
+    transform: rotate(0)
+  }
+
+  to {
+    transform: translateY(33.5px) rotate(45deg); 
+  }
 }
 
 @keyframes middle {
   from {}
+
   to {}
 }
 
 @keyframes bottom {
-  from {}
-  to {}
+  from {
+    transform: rotate(0);
+  }
+
+  to {
+    transform: translateY(-33.5px) rotate(-45deg);
+  }
 }
